completada la logica de checkGanador()

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -295,5 +295,6 @@
     <script src="../js/modalCompra.js"></script> 
     <script src="../js/game/Ficha.js"></script>
     <script src="../js/game/Tablero.js"></script>
+    <script src="../js/game/main.js"></script>
 </body>
 </html>
