--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -414,8 +414,8 @@
     <script src="../js/game/Tablero.js"></script>
     <script src="../js/game/main.js"></script>
 
-	<script src="../js/game/playButton.js"></script>
-	<script src="../js/game/drawPlayButton.js"></script>
+	<!-- <script src="../js/game/playButton.js"></script>
+	<script src="../js/game/drawPlayButton.js"></script> -->
 	
 </body>
 </html>
