--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -116,22 +116,22 @@
 						<form action="nuevoJuego" id="form-nuevo-juego" method="POST">
 							<div class="tipo-de-juego">
 									<div class="check-radios">
-										<div><input type="radio"  class="chk-icon-game" id="g-type-4" name="game-type" value="g-type-4" checked>
+										<div><input type="radio"  class="chk-icon-game" id="g-type-4" name="game-type" value="0" checked>
 											<label for="g-type-4" >
 												<div class="img-icon-game"><img src="../img/img-games/img-imperio/4EnLinea-Icono.png"  alt="Cuatro en linea" width="100" height="100"></div>
 											</label>
 										</div>
-										<div><input type="radio"  class="chk-icon-game" id="g-type-5" name="game-type" value="g-type-5">
+										<div><input type="radio"  class="chk-icon-game" id="g-type-5" name="game-type" value="1">
 											<label for="g-type-5" >
 												<div class="img-icon-game"><img src="../img/img-games/img-imperio/5EnLinea-Icono.png"  alt="Cinco en linea" width="100" height="100"></div>
 											</label>
 										</div>
-										<div><input type="radio"  class="chk-icon-game" id="g-type-6" name="game-type" value="g-type-6">
+										<div><input type="radio"  class="chk-icon-game" id="g-type-6" name="game-type" value="2">
 											<label for="g-type-6" >
 												<div class="img-icon-game"><img src="../img/img-games/img-imperio/6EnLinea-Icono.png"  alt="Seis en linea" width="100" height="100"></div>
 											</label>
 										</div>
-										<div><input type="radio"  class="chk-icon-game" id="g-type-7" name="game-type" value="g-type-7">
+										<div><input type="radio"  class="chk-icon-game" id="g-type-7" name="game-type" value="3">
 											<label for="g-type-7" >
 												<div class="img-icon-game"><img src="../img/img-games/img-imperio/7EnLinea-Icono.png"  alt="Siete en linea" width="100" height="100"></div>
 											</label>
@@ -150,27 +150,27 @@
 											<label>Elige tu escudo</label> 
 										</div>
 										<div class="iconos-fichas-1">
-											<div><input type="radio"  class="chk-icon-game-1" id="f-res-1" name="game-type-1" value="f-res-1" checked>
+											<div><input type="radio"  class="chk-icon-game-1" id="f-res-1" name="game-type-1" value="../img/img-games/img-imperio/FichaResistencia-1.png" checked>
 												<label for="f-res-1" >
 													<div class="img-icon-game-1"><img src="../img/img-games/img-imperio/FichaResistencia-1.png"  alt="Ficha resistencia 1" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-1" id="f-res-2" name="game-type-1" value="f-res-2" >
+											<div ><input type="radio" class="chk-icon-game-1" id="f-res-2" name="game-type-1" value="../img/img-games/img-imperio/FichaResistencia-1.png" >
 												<label for="f-res-2">
 													<div class="img-icon-game-1"><img src="../img/img-games/img-imperio/FichaResistencia-2.png" alt="Ficha resistencia 2" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-1" id="f-res-3" name="game-type-1" value="f-res-3" >
+											<div ><input type="radio" class="chk-icon-game-1" id="f-res-3" name="game-type-1" value="../img/img-games/img-imperio/FichaResistencia-1.png" >
 												<label for="f-res-3">
 													<div class="img-icon-game-1"><img src="../img/img-games/img-imperio/FichaResistencia-3.png" alt="Ficha resistencia 3" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-1" id="f-res-4" name="game-type-1" value="f-res-4" >
+											<div ><input type="radio" class="chk-icon-game-1" id="f-res-4" name="game-type-1" value="../img/img-games/img-imperio/FichaResistencia-1.png" >
 												<label for="f-res-4">
 													<div class="img-icon-game-1"><img src="../img/img-games/img-imperio/FichaResistencia-4.png" alt="Ficha resistencia 4" width="50" height="50"></div>
 												</label>
 											</div>
-											<div><input type="radio" class="chk-icon-game-1" id="f-res-5" name="game-type-1" value="f-res-5" >
+											<div><input type="radio" class="chk-icon-game-1" id="f-res-5" name="game-type-1" value="../img/img-games/img-imperio/FichaResistencia-1.png" >
 												<label for="f-res-5">
 													<div class="img-icon-game-1"><img src="../img/img-games/img-imperio/FichaResistencia-5.png" alt="Ficha resistencia 5" width="50" height="50"></div>
 												</label>
@@ -189,27 +189,27 @@
 											<label>Elige tu escudo</label> 
 										</div>
 										<div class="iconos-fichas-2">
-											<div ><input type="radio"  class="chk-icon-game-2" id="f-imp-1" name="game-type-2" value="f-imp-1" checked>
+											<div ><input type="radio"  class="chk-icon-game-2" id="f-imp-1" name="game-type-2" value="../img/img-games/img-imperio/FichaImperio-1.png" checked>
 												<label for="f-imp-1" >
 													<div class="img-icon-game-2"><img src="../img/img-games/img-imperio/FichaImperio-1.png"  alt="Ficha imperio 1" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-2" name="game-type-2" value="f-imp-2" >
+											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-2" name="game-type-2" value="../img/img-games/img-imperio/FichaImperio-2.png" >
 												<label for="f-imp-2">
 													<div class="img-icon-game-2"><img src="../img/img-games/img-imperio/FichaImperio-2.png" alt="Ficha imperio 2" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-3" name="game-type-2" value="f-imp-3" >
+											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-3" name="game-type-2" value="../img/img-games/img-imperio/FichaImperio-3.png" >
 												<label for="f-imp-3">
 													<div class="img-icon-game-2"><img src="../img/img-games/img-imperio/FichaImperio-3.png" alt="Ficha imperio3" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-4" name="game-type-2" value="f-imp-4" >
+											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-4" name="game-type-2" value="../img/img-games/img-imperio/FichaImperio-4.png" >
 												<label for="f-imp-4">
 													<div class="img-icon-game-2"><img src="../img/img-games/img-imperio/FichaImperio-4.png" alt="Ficha imperio4" width="50" height="50"></div>
 												</label>
 											</div>
-											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-5" name="game-type-2" value="f-imp-5" >
+											<div ><input type="radio" class="chk-icon-game-2" id="f-imp-5" name="game-type-2" value="../img/img-games/img-imperio/FichaImperio-5.png" >
 												<label for="f-imp-5">
 													<div class="img-icon-game-2"><img src="../img/img-games/img-imperio/FichaImperio-5.png" alt="Ficha imperio 5" width="50" height="50"></div>
 												</label>
@@ -226,7 +226,7 @@
 					</div>
 				</div>
 			</section>
-			<canvas id="canvas" width="1100" height="400" ><a href="link.html">BOTON </a></canvas>
+			<canvas id="canvas" width="1100" height="600" ></canvas>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
 				<li><h3>El Imperio y las cuatro estrellas de la muerte</h3></li>
@@ -414,8 +414,8 @@
     <script src="../js/game/Tablero.js"></script>
     <script src="../js/game/main.js"></script>
 
-	<!-- <script src="../js/game/playButton.js"></script>
-	<script src="../js/game/drawPlayButton.js"></script> -->
+	 <script src="../js/game/playButton.js"></script>
+	<script src="../js/game/drawPlayButton.js"></script>
 	
 </body>
 </html>
