player se sabe dibujar con fichas

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -409,13 +409,14 @@
 	<!-- <script src="../js/loader.js"></script> -->
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>
-    <script src="../js/modalGame.js"></script> 
-    <script src="../js/game/Ficha.js"></script>
-    <script src="../js/game/Tablero.js"></script>
-    <script src="../js/game/main.js"></script>
+    <script src="../js/game/connect_4.js"></script> 
+    <script src="../js/game/Chip.js"></script>
+    <script src="../js/game/Player.js"></script>
+    <script src="../js/game/Board.js"></script>
+    <script src="../js/game/Game.js"></script>
 
-	 <script src="../js/game/playButton.js"></script>
-	<script src="../js/game/drawPlayButton.js"></script>
+	<!-- <script src="../js/game/playButton.js"></script>
+	<script src="../js/game/drawPlayButton.js"></script> -->
 	
 </body>
 </html>
