Se trabaja en posisionamiento del boton de play.

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -220,7 +220,7 @@
 							</div> 							 
 							<div class="btn-detalle">
 								<a class="btn-juego btn-cancelar" href="javascript:cerrarModalGame()">Cancelar</a>
-								<input type="submit" value="Jugar" class="btn-juego btn-jugar"><!--a class="btn-juego btn-jugar" href="javascript:modalGame()">Jugar</a-->
+								<input type="submit" value="Jugar" class="btn-juego btn-jugar">
 							</div>						                                 
 						</form>
 					</div>
@@ -409,10 +409,10 @@
 	<!-- <script src="../js/loader.js"></script> -->
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>
-    <script src="../js/modalGame.js"></script> 
-    <script src="../js/game/Ficha.js"></script>
+    <script src="../js/game/connect_4.js"></script> 
+    <!--script src="../js/game/Ficha.js"></script>
     <script src="../js/game/Tablero.js"></script>
-    <script src="../js/game/main.js"></script>
+    <script src="../js/game/main.js"></script-->
 
 	 <script src="../js/game/playButton.js"></script>
 	<script src="../js/game/drawPlayButton.js"></script>
