--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -111,29 +111,29 @@
 		<div class="game-window">
 			<section id="modalContainerMensaje ModalContainerConfigGame" class="modalContainerMensaje ModalContainerConfigGame ocultar">
 				<div class="modal-game">
-					<!--h2>Nuevo Juego</h2-->
+					<div class="selec-dif"><h3>Seleccionen la dificultad</h3></div>
 					<div class="form">
 						<form action="nuevoJuego" id="form-nuevo-juego" method="POST">
 							<div class="tipo-de-juego">
 									<div class="check-radios">
 										<div><input type="radio"  class="chk-icon-game" id="g-type-4" name="game-type" value="0" checked>
 											<label for="g-type-4" >
-												<div class="img-icon-game"><img src="../img/img-games/img-imperio/4EnLinea-Icono.png"  alt="Cuatro en linea" width="100" height="100"></div>
+												<div class="img-icon-game"><img src="../img/img-games/img-imperio/4EnLinea-Icono-A.png"  alt="Cuatro en linea" width="70" height="70"></div>
 											</label>
 										</div>
 										<div><input type="radio"  class="chk-icon-game" id="g-type-5" name="game-type" value="1">
 											<label for="g-type-5" >
-												<div class="img-icon-game"><img src="../img/img-games/img-imperio/5EnLinea-Icono.png"  alt="Cinco en linea" width="100" height="100"></div>
+												<div class="img-icon-game"><img src="../img/img-games/img-imperio/5EnLinea-Icono-A.png"  alt="Cinco en linea" width="70" height="70"></div>
 											</label>
 										</div>
 										<div><input type="radio"  class="chk-icon-game" id="g-type-6" name="game-type" value="2">
 											<label for="g-type-6" >
-												<div class="img-icon-game"><img src="../img/img-games/img-imperio/6EnLinea-Icono.png"  alt="Seis en linea" width="100" height="100"></div>
+												<div class="img-icon-game"><img src="../img/img-games/img-imperio/6EnLinea-Icono-A.png"  alt="Seis en linea" width="70" height="70"></div>
 											</label>
 										</div>
 										<div><input type="radio"  class="chk-icon-game" id="g-type-7" name="game-type" value="3">
 											<label for="g-type-7" >
-												<div class="img-icon-game"><img src="../img/img-games/img-imperio/7EnLinea-Icono.png"  alt="Siete en linea" width="100" height="100"></div>
+												<div class="img-icon-game"><img src="../img/img-games/img-imperio/7EnLinea-Icono-A.png"  alt="Siete en linea" width="70" height="70"></div>
 											</label>
 										</div>								
 									</div>
@@ -415,8 +415,8 @@
     <script src="../js/game/Board.js"></script>
     <script src="../js/game/Game.js"></script>
 
-	<!-- <script src="../js/game/playButton.js"></script>
-	<script src="../js/game/drawPlayButton.js"></script> -->
+	<script src="../js/game/playButton.js"></script>
+	<script src="../js/game/drawPlayButton.js"></script>
 	
 </body>
 </html>
