--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -415,8 +415,8 @@
     <script src="../js/game/Board.js"></script>
     <script src="../js/game/Game.js"></script>
 	
-	<script src="../js/game/playButton.js"></script>
-	<script src="../js/game/drawPlayButton.js"></script>
+	<!--script src="../js/game/playButton.js"></script>
+	<script src="../js/game/drawPlayButton.js"></script-->
 	
 </body>
 </html>
