--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="../css/Connect_4.css" type="text/css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<title>El Imperio y las cuatro estrellas de la muerte - WASD Games</title>
-	<link rel="icon" type="image/x-icon" href="/Entregable3/img/icons/Img-Logo.svg">
+	<!--link rel="icon" type="image/x-icon" href="/Entregable3/img/icons/Img-Logo.svg"-->
 </head>
 <body>
 	<header class="header">
