Se ata con aalmbre

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -226,6 +226,7 @@
 					</div>
 				</div>
 			</section>
+			<canvas id="timerCanvas" width="900" height="50" ></canvas>
 			<canvas id="canvas" width="900" height="500" ></canvas>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
@@ -409,15 +410,15 @@
 	<!-- <script src="../js/loader.js"></script> -->
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>
-    <script src="../js/game/connect_4.js"></script> 
     <script src="../js/game/Chip.js"></script>
     <script src="../js/game/Player.js"></script>
     <script src="../js/game/Board.js"></script>
     <script src="../js/game/Game.js"></script>
-	<!-- 
+	
+    <!--script src="../js/game/connect_4.js"></script--> 
 		<script src="../js/game/playButton.js"></script>
 		<script src="../js/game/drawPlayButton.js"></script>
-	 -->
+	
 	
 </body>
 </html>
