Se implementa boton reset y aviso de ganador o empate.

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -144,7 +144,7 @@
 									<div class="form-datos-jugador-uno">										
 										<div class="mb-3">
 											<label for="name">Nombre Jugador 1</label>
-											<input type=text id="name-jug-1" name="name-jug-1" required>
+											<input type=text id="name-jug-1" name="name-jug-1" maxlength="10" required>
 										</div>
 										<div class="mb-3">  
 											<label>Elige tu escudo</label> 
@@ -183,7 +183,7 @@
 									<div class="form-datos-jugador-dos">	
 										<div class="mb-3">  
 											<label>Nombre Jugador 2</label>     
-											<input type=text id="name-jug-2" name="name-jug-2" required>
+											<input type=text id="name-jug-2" name="name-jug-2" maxlength="10" required>
 										</div>
 										<div class="mb-3">  
 											<label>Elige tu escudo</label> 
