Se agrega boton aviso empate por falta de tiempo. Se cambia la fuente.

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -414,7 +414,7 @@
     <script src="../js/game/Player.js"></script>
     <script src="../js/game/Board.js"></script>
     <script src="../js/game/Game.js"></script>
-	
+	<script src="../js/game/drawBoardBackImage.js"></script>
 	<script src="../js/game/playButton.js"></script>
 	<script src="../js/game/drawPlayButton.js"></script>
     <script src="../js/game/connect_4.js"></script> 
