Se soluciona bug de reinicio despues de ganar o empatar

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -140,8 +140,8 @@
                           </div>
                         </div>
                         <div class="btn-detalle">
-                          <a class="btn-compra btn-cancelar" href="javascript:cerrarModalCompra()">Cancelar</a>
-                          <a class="btn-compra btn-confirmar" href="javascript:cerrarModalCompra()">Pagar</a>
+                          <a class="btn-compra btn-cancelar" href="javascript:cerrarModalWindow()">Cancelar</a>
+                          <a class="btn-compra btn-confirmar" href="javascript:cerrarModalWindow()">Pagar</a>
                         </div>   
                       </div> 
                     </div>                                     
