--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -226,7 +226,7 @@
 					</div>
 				</div>
 			</section>
-			<canvas id="timerCanvas" width="900" height="50" ></canvas>
+			<canvas id="upperCanvas" width="900" height="50" ></canvas>
 			<canvas id="canvas" width="900" height="500" ></canvas>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
