--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -226,8 +226,10 @@
 					</div>
 				</div>
 			</section>
-			<canvas id="upperCanvas" width="900" height="50" ></canvas>
-			<canvas id="canvas" width="900" height="500" ></canvas>
+			<div class="game">
+				<canvas id="upperCanvas" class="canvas" width="900" height="50" ></canvas>
+				<canvas id="canvas" class="canvas" width="900" height="500" ></canvas>
+			</div>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
 				<li><h3>El Imperio y las cuatro estrellas de la muerte</h3></li>
