--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -111,7 +111,7 @@
 		<div class="game-window">
 			<section id="modalContainerMensaje ModalContainerConfigGame" class="modalContainerMensaje ModalContainerConfigGame ocultar">
 				<div class="modal-game">
-					<div class="selec-dif"><h3>Seleccionen la dificultad</h3></div>
+					<div class="selec-dif"><h3>Dificultad (fichas en linea)</h3></div>
 					<div class="form">
 						<form action="nuevoJuego" id="form-nuevo-juego" method="POST">
 							<div class="tipo-de-juego">
