Se redimensionan paginas y cards de carruseles

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -731,7 +731,7 @@
                         <div></div>
                           <div class="img-juego-small" id="LegoFutbol.png"><img src="./img/img-games/img-cards-small/LegoFutbol.png" alt="LEGO Futbol."></div>
                           <div class="datos-juego-small">
-                              <div class="titulo-small-card"><h3>LEGO Fubtol</h3></div>
+                              <div class="titulo-small-card"><h3>LEGO Futbol</h3></div>
                               <div class="contenido-small-card"><p>Participa del mundial LEGO de futbol.</p></div>
                               <div class="precio-small-card"><h2>$ 800</h2></div>
                           </div>    
@@ -761,7 +761,7 @@
                         <div></div>
                           <div class="img-juego-small" id="LegoFutbol.png"><img src="./img/img-games/img-cards-small/LegoFutbol.png" alt="LEGO Futbol."></div>
                           <div class="datos-juego-small">
-                              <div class="titulo-small-card"><h3>LEGO Fubtol</h3></div>
+                              <div class="titulo-small-card"><h3>LEGO Futbol</h3></div>
                               <div class="contenido-small-card"><p>Participa del mundial LEGO de futbol.</p></div>
                               <div class="precio-small-card"><h2>$ 800</h2></div>
                           </div>
