--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -228,7 +228,7 @@
 			</section>
 			<div class="game">
 				<canvas id="upperCanvas" class="canvas" width="900" height="50" ></canvas>
-				<canvas id="canvas" class="canvas" width="900" height="500" ></canvas>
+				<canvas id="canvas" class="canvas" width="900" height="500" >Tu navegador no soporta canvas. :(</canvas>
 			</div>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
@@ -245,17 +245,17 @@
 		<section class="preview">
 			<h3>Game preview</h3>
 			<ul>
-				<li><img src="../img/img-games/img-imperio/Game-preview-video.svg" alt=""></li>
-				<li><img src="../img/img-games/img-imperio/Game-preview-img1.svg" alt=""></li>
-				<li><img src="../img/img-games/img-imperio/Game-preview-img2.svg" alt=""></li>
+				<li><video src="../img/img-games/img-imperio/Jugando Connect4 Stars Wars.mp4" type="video/mp4" width="300" height="200" controls>Tu navegador no soporta el formato de video. :(</video></li>
+				<li><img src="../img/img-games/img-imperio/Jugando5.png" width="300" height="200" alt="Jugando"></li>
+				<li><img src="../img/img-games/img-imperio/Jugando4.png" width="300" height="200" alt="Jugando"></li>
 			</ul>
 		</section>
 		<section class="how-to">
 			<h3>¿Como se juega?</h3>
 			<ul>
-				<li><img src="../img/img-games/img-imperio/Game-help-img1.svg" alt=""></li>
-				<li><img src="../img/img-games/img-imperio/Game-help-img2.svg" alt=""></li>
-				<li><img src="../img/img-games/img-imperio/Game-help-img3.svg" alt=""></li>
+				<li><img src="../img/img-games/img-imperio/Jugando1.png" width="300" heigt="200" alt=""></li>
+				<li><img src="../img/img-games/img-imperio/Jugando3.png" width="300" heigt="200" alt=""></li>
+				<li><img src="../img/img-games/img-imperio/jugando2.png" width="300" heigt="200" alt=""></li>
 			</ul>
 		</section>
         <section class="comunidad">
