Se solucionan algunos bugs en mobile.

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -326,6 +326,7 @@
                               <div class="contenido-small-card"><p>Esquiva las serpientes y gana.</p></div>
                               <div class="precio-small-card"><h2>Agregado</h2></div>
                           </div>
+                          <div class="back-btn"></div>
                       </div>
                   </div>
                   </li>
@@ -883,6 +884,6 @@
     <script src="./js/loader.js"></script>
     <script src="./js/burgermenu.js"></script> 
     <script src="./js/movimientoCarrusel.js"></script>
-    <script src="./js/modalCompra.js"></script> 
+    <script src="./js/modalWindow.js"></script> 
 </body>
 </html>
